--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,23 +4,55 @@
 @media  ( max-width: 992px )
   .container
     max-width: 700px
+  .logo
+    width: 132px
   .navbar
     &-top
       padding-top: 30px
       padding-bottom: 30px
     &__search
       margin-left: auto
-      max-width: 340px
+      
     &-menu
+      
       padding-top: 22px
       padding-bottom: 22px
       &__link
         font-size 12px
         line-height: 15px
+  .search
+    &__input
+      width: 340px
+
 @media ( max-width: 768px )
   .container
     max-width: 700px
-    widows: 92%
+    width: 92%
+  .navbar
+    &__search, &-menu, &__user
+      display: none
+    &-top
+  .menu
+    &-button
+      display: flex
+      align-items: center
+      justify-content: space-between
+      flex-direction: column
+      border: none
+      height: 11px
+      width: 16px
+      padding: 0
+      background-color: $light
+      cursor: pointer
+      &__line
+        width: 16px
+        height: 1px
+        background-color: $text-color
+@media  ( max-width: 576px )
+.logo
+  width: 99px
+  
+        
 
   
   
