--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -6,6 +6,8 @@
     justify-content: space-between
     padding-top: 40px
     padding-bottom: 40px
+    &__menu-button
+      display: none
   &-bottom
     background-color: $dark
   &-menu
